# buy-low-sell-high

./: .env_template  main.py  pyproject.toml  trading_bot.py
src/: bybit_trading_bot.py
